text-align fix

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -48,6 +48,7 @@ h2 {
 
 h3{
   font-size: 2.5rem;
+  text-align: center;
 }
 
 p {
